# primav2

./: .gitignore  DEPLOY.md  QA-STRATEGY.md  README.md  SECURITY.md  TRAINING.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  Dockerfile.train  README.md  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/agent/: bigquery_tool.py  graph.py  nodes.py  runtime.py  state.py
backend/app/api/: events.py  quota.py  routes.py  security.py
backend/app/detectors/: baseline.py  chronos.py  model_store.py
backend/app/detectors/omnianomaly/: README.md  __init__.py  detector.py  model.py
backend/app/eval/: alibaba.py  benchmark.py  metrics.py
backend/app/llm/: gemini.py
backend/scripts/: e2e_check.py  run_alibaba_benchmark.py  submit_train_job.sh  train_omni.py  validate_smd.py
backend/tests/: test_agent.py  test_api.py  test_api_contract.py  test_baseline.py  test_benchmark.py  test_data_integrity.py  test_metrics.py  test_omnianomaly.py  test_quota.py  test_security.py
docs/: user-stories.md
docs/test-cases/: README.md  TC-API.md  (+5 more)
frontend/: .dockerignore  .gcloudignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.mts  vitest.setup.ts
loadtest/: PERF-PLAN.md  README.md  burst-rejections.js  health-ramp.js  soak-analyze.js
scripts/: get_alibaba.sh
warehouse/: alibaba_benchmark_results.json  alibaba_benchmark_results.md  alibaba_windowing.sql  smd_validation.json  smd_validation.md
(+16 files in other folders)
