[project]
name = "primav2-backend"
version = "0.1.0"
description = "primav2 — machine-reliability anomaly-detection agent (FastAPI + Gemini on Vertex AI + BigQuery)"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "pydantic-settings>=2.7",
    "google-genai>=1.0",
    "google-cloud-bigquery>=3.27",
    "numpy>=2.1",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "langgraph>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

# Heavy ML deps for the OmniAnomaly + Chronos arms — kept out of the lean dev install.
# Install with: uv sync --group ml
ml = [
    "torch>=2.4",
    "chronos-forecasting>=1.5",  # Chronos-Bolt forecaster arm (pulls transformers)
]

[tool.ruff.lint]
# Depends()/Query()/etc. in argument defaults is correct FastAPI, not a bug (B008).
extend-select = ["B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
